--- a/src/css/style.css
+++ b/src/css/style.css
@@ -191,7 +191,7 @@ footer .tosave i {
         font-size: 16px;
     }
 
-    .sessao1 .texto1 button,
+    .sessao1 .texto1 a,
     .sessao2 .texto2 a {
         margin-top: 10px;
         font-size: 12px;
