--- a/src/css/style.css
+++ b/src/css/style.css
@@ -56,7 +56,7 @@ img {
     position: absolute;
     top: 30%;
     padding: 10px;
-    left: 50%;
+    left: 48%;
 }
 
 .capa .texto0 {
@@ -182,9 +182,11 @@ footer .tosave i {
         width: 230px;
         top: 10%;
     }
-
+    .sessao1 .texto1{
+        top: 25%;
+    }
     .sessao1 .texto1 h1 {
-        font-size: 18px;
+        font-size: 24px;
     }
 
     .sessao2 .texto2 h2 {
@@ -194,7 +196,7 @@ footer .tosave i {
     .sessao1 .texto1 a,
     .sessao2 .texto2 a {
         margin-top: 10px;
-        font-size: 12px;
+        font-size: 8px;
     }
 
     .sessao2 .texto2 p {
